--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@walletconnect/web3-provider": "^1.3.3",
     "bootstrap": "^4.6.0",
     "did-resolver": "^2.1.2",
+    "eth-rpc-errors": "^4.0.2",
     "ethjs-query": "^0.3.8",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
