--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@rsksmart/ethr-did": "^1.1.1-beta.1",
     "@rsksmart/rlogin": "0.1.0",
+    "@toruslabs/torus-embed": "^1.9.9",
     "@walletconnect/web3-provider": "^1.3.3",
     "bootstrap": "^4.6.0",
     "did-resolver": "^2.1.2",
